# feature-engineering-poc

./: .env.example  .gitignore  DATABRICKS_GUIDE.md  DESIGN.md  README-DATABRICKS.md  README.md  README_DATABRICKS.md  SCALA_MIGRATION.md  build.sbt  databricks-config.json  databricks.yml  pyproject.toml  run_databricks_job.sh  run_job_on_databricks.py  setup.py  submit_scala_job.py
.metals/: metals.lock.db  metals.mv.db
configs/jobs/: databricks_transaction_features_job.json  generate_temp_transaction_features_job.yaml  generate_transaction_features_job.yaml  local_transaction_features_job.json  sample_financial_features_job.yaml  test_temp_fact_mm_transaction_job.yaml
docs/diagrams/: entity_relationships
domain/: __init__.py
domain/core/: __init__.py  config.py  entity.py  registry.py  source_definition.py  source_registry.py  spark.py
domain/features/: __init__.py  factory.py  transaction_transformers.py  transform.py
domain/jobs/: __init__.py  config_loader.py
domain/sources/: __init__.py  base.py  databricks_spark.py  databricks_sql.py  spark_base.py
feature-engineering-scala/: DATABRICKS_GUIDE.md  LICENSE  README.md  build.sbt  run_databricks_job.sh
feature-engineering-scala/project/: plugins.sbt
feature_platform/: __init__.py
feature_platform/core/: __init__.py  config.py  source_registry.py  spark.py
feature_platform/features/: __init__.py  factory.py  financial_transformers.py
feature_platform/jobs/: __init__.py  (+1 more)
project/: plugins.sbt
registry/: CHANGELOG.md  README.md
runner/: databricks_job_main.py  execute_batch_job.py  run_databricks_connect_job.py  run_spark_job.py
scripts/: check_databricks_schema.py  create_test_data.py  databricks_sql_connector_test.py  generate_entity_diagram.py  list_databricks_tables.py  migrate_sources.py  submit_to_databricks.py  test_databricks_connection.py  validate_registry.py  validate_source_catalog.py  validate_sources.py
source/: README.md
tests/: __init__.py  conftest.py  test_entity.py  test_registry.py
(+118 files in other folders)
